Fix sidebar subheader visibility in light mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,16 @@ p {
   color: rgb(24 24 27);
 }
 
+.nextra-sidebar-container span,
+.nextra-sidebar-container div {
+  color: rgb(24 24 27);
+}
+
+.dark .nextra-sidebar-container span,
+.dark .nextra-sidebar-container div {
+  color: rgb(161 161 170);
+}
+
 .dark .nextra-sidebar-container,
 .dark .nextra-sidebar-container a,
 .dark .nextra-sidebar-container h1,
